--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,11 @@
     <string name="averageHeight_generic">Average height:</string>
     <string name="averageLifespan_generic">Average lifespan:</string>
     <string name="language_generic">Language:</string>
+    <string name="model_generic">Model:</string>
+    <string name="class_generic">Starship class:</string>
+    <string name="manufacturer_generic">Manufacturer:</string>
+    <string name="cost_generic">Cost in credits:</string>
+    <string name="length_generic">Length:</string>
+    <string name="crew_generic">Crew:</string>
+    <string name="passengers_generic">Passengers:</string>
 </resources>
