--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,10 +53,12 @@
     <string name="language_generic">Language:</string>
 
     <string name="model_generic">Model:</string>
-    <string name="class_generic">Class:</string>
+    <string name="starship_class_generic">Starship class:</string>
     <string name="manufacturer_generic">Manufacturer:</string>
     <string name="cost_generic">Cost in credits:</string>
     <string name="length_generic">Length:</string>
     <string name="crew_generic">Crew:</string>
     <string name="passengers_generic">Passengers:</string>
+
+    <string name="vehicle_class_generic">Vehicle class:</string>
 </resources>
